traces/bug_249.txt
#249
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3051: error: Deadlock
  Potential self deadlock. `CheckpointTest_MB_47516_Test::TestBody` locks `&(this->manager->queueLock)` in `class CheckpointTest_MB_47516_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3051:19: In method `CheckpointTest_MB_47516_Test::TestBody`
3049.     // ask for all data, we should be told to try backfill and be given a cursor
3050.     // for the high-seqno which is still in the cp-manager
3051.     auto cursor = manager->registerCursorBySeqno(
                        ^
3052.             "MB_47516", 0, CheckpointCursor::Droppable::Yes);
3053.     EXPECT_TRUE(cursor.tryBackfill);

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3051:19: Method call: `CheckpointManager::registerCursorBySeqno`
3049.     // ask for all data, we should be told to try backfill and be given a cursor
3050.     // for the high-seqno which is still in the cp-manager
3051.     auto cursor = manager->registerCursorBySeqno(
                        ^
3052.             "MB_47516", 0, CheckpointCursor::Droppable::Yes);
3053.     EXPECT_TRUE(cursor.tryBackfill);

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB_47516_Test`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class CheckpointTest_MB_47516_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
